mutable/training_output_20ep.txt
  File "/home/faris/crescent-agi/runs/gen-0008/mutable_snapshot/train_20ep.py", line 38
    \"\"\"Simulates a simple workspace with files and journal.\"\"\"
     ^
SyntaxError: unexpected character after line continuation character
